# TMC2209_Linux

./: .gitignore  CMakeLists.txt  Current_DEBUG_NOTES_0415.md  LICENSE  PORTING_NOTES.md  README.md  agd_motor_demo.py  test_configure_only.py  test_configure_pulse.py  test_debug_one_read.py  test_gpio23_button.py  test_homing.py  test_motor.py  test_raw_uart.py  test_sg_pwm.py  test_sg_stage1.py  test_sg_stage2.py  test_sg_stage3.py  test_sg_tune.py
archive/isr_architecture_v1/: _ARCHIVE_NOTES.md
archive/isr_architecture_v1/include/: Arduino.h
include/: Arduino.h  HardwareSerial.h  SoftwareSerial.h  Stream.h  linux_serial.h  tmc2209_driver.h  trapezoidal.h
include/src/: linux_serial.cpp
src/: bindings.cpp  linux_serial.cpp  tmc2209_driver.cpp  trapezoidal.cpp
tests/: 0429_2026_gpio_test.py  test_chopper_mode.py  test_configure_no_coolstep.py  test_diag_and_sg.py  test_diag_level.py  test_en_pin.py  test_gpio23_reset.py  test_pierce.py  test_pulse_only.py  test_sg_live.py  test_stage4.py  test_step_basic.py  test_uart.py  test_version.py
